--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -4,6 +4,7 @@
   justify-content: space-around;
   margin: 0;
   padding: 0;
+  
 }
 .pied-page ul {
   list-style-type: none;
@@ -18,7 +19,7 @@
   display: block;
   text-decoration: none;
   padding: 5px;
-  border-bottom: 1px dotted #d7ca7c;
+  color : #fff !important;
 }
 .pied-page ul li a:hover {
   color: #be4509;
