--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,13 +12,13 @@ body {
   border-bottom: : 1px dotted #555;
 }
 .couleur-entete {
-  background-color: #d7ca7c;
+  background-color: #4c7299;
 }
 .couleur-main {
-  background-color: #dddddd;
+  background-color: #fff;
 }
 .couleur-footer {
-  background-color: #d7ca7c;
+  background-color: #4c7299;
 }
 .couleur-footer li {
   color: #2e2c28;
@@ -49,12 +49,20 @@ body {
 .entete h1 {
   font-size: 3em;
   margin: 0;
+  color : #fff;
 }
 .entete h2 {
   font-size: 1em;
   font-style: italic;
   align-self: flex-start;
+  color : #fff;
 }
+
+.entete a {
+  color : #fff;
+}
+
+
 @media all and (min-width: 960px) {
   .global {
     padding: 20px 0 20px 0;
