--- a/views/composants/menu.ejs
+++ b/views/composants/menu.ejs
@@ -8,6 +8,7 @@
 			<i class="fa fa-bars" aria-hidden="true"></i>
 		</label>
 		<div id='menu'>
+			<a id="nodejs"><i class="fab fa-node"></i></a>
 			<nav> 		 
 				 <a href='/'><i class="fa fa fa-users" aria-hidden="true"></i><%= __("accueil")  %></a>
 				 <a href='/vider'><i class="fa fa-industry" aria-hidden="true"></i><%= __("vider")  %></a>
