--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -84,6 +84,10 @@
   text-decoration: none;
   padding: 1%;
 }
+
+.recherche {
+  padding-top : 2%;
+}
 @media all and (min-width: 700px) {
   .couleur-menu {
     display: flex;
